--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ llama-index-tools-tavily_research==0.2.0
 llama-index-callbacks-arize-phoenix==0.2.1
 pydantic==2.8.2
 retrying==1.3.4
-pymongo==4.6.1
+pymongo==4.6.3
 python-dotenv==1.0.1
 tiktoken==0.7.0
+dill==0.3.8
